Fixed errors including crashes on commands and offline markers not being rendered at the right place - Game would crash when a command succeded (porting from kotlin to java mistake) - Offline Markers would be rendered at (x, x, x) coordinates instead of (x, y, z) which if for the less disturbing